Added description to Index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome!</title>
+    <h1>Abigail Mitchell's Digital Resume</h1>
 </head>
 <body>
-    
+    <p>Abigail Mitchell, Olive Branch, MS</p>
+    <p>Mississippi State University, Bachelor of Science in Electrical Engineering, May 2025, Major GPA: 3.75</p>
+    <p>
+        <ul>
+            <li>Experience in Microsoft Excel, Word, and Powerpoint</li>
+            <li>General knowledge in Python and C++</li>
+            <li>General knowledge with Circuits and Microprocessors</li>
+        </ul>
+    </p>
+    <p>
+        Tennessee Valley Authority, Electrical Engineering Intern, Southaven, MS: May 2024 - August 2024
+    </p>
+    <p>
+        Plaskolite South LLC, Engineering Intern, Olive Branch, MS: May 2023 - August 2023
+    </p>
+    <img src="C:\Users\Abigail Mitchell\OneDrive\Documents\Desktop\Senior Design\headshot.jpg" alt="Headshot"> 
 </body>
 </html>
