Added headshot to index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <p>
         Plaskolite South LLC, Engineering Intern, Olive Branch, MS: May 2023 - August 2023
     </p>
-    <img src="C:\Users\Abigail Mitchell\OneDrive\Documents\Desktop\Senior Design\headshot.jpg" alt="Headshot"> 
+    <img src="digital-resume\headshot.jpg" alt="Headshot"> 
 </body>
 </html>
